--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-banner-heading: 
+banner-heading:
 banner-image: /uploads/nathans-sign-2400-x-800-25.jpg
 title: Nathans Boutique | Custom Fashion
 ---
@@ -9,10 +9,9 @@ title: Nathans Boutique | Custom Fashion
   <header class="header-image mob-hide" style="background-image: url('{{page.banner-image}}');">
      <!--<h1 class="front-title mob-show">Nathans Boutique</h1>-->
     <!--</div>-->
-    <!--  {% include navigation.html %}   <!-- this places the nav bar on the banner 
+    <!--  {% include navigation.html %}   <!-- this places the nav bar on the banner
     </div>-->
   </header>
-
 
 <!-- GRID SECTION ---->
 <section class="mob-hide">
@@ -33,7 +32,7 @@ title: Nathans Boutique | Custom Fashion
       <div class="col-8_sm-12">
         <h5 style="font-size: 10vw; padding: 1rem .5rem 1rem;">Let's <span>connect</span></h5>
         <p class="connect-text editable">
-           Got a question or want to make a purchase? 
+           Got a question or want to make a purchase?
            <br/>
            Send me an email or visit in store.
            <br/>
@@ -49,7 +48,7 @@ title: Nathans Boutique | Custom Fashion
           <input type="hidden" name="_to" value="nathansboutique@bigpond.com" /><!--sends the form to my email-->
           <input type="text" id="fname" name="firstname" placeholder="Your name.." />
           <input type="text" id="email" name="email" placeholder="Your email.." />
-          <textarea id="subject" name="subject" placeholder="Tell us what you want to say..." style="height:200px"></textarea>
+          <textarea id="subject" name="subject" placeholder="Get in touch with your custom clothing needs..." style="height:200px"></textarea>
           <input type="submit" value="Submit" />
           </form>
       </div>
